Fix overflow en el main

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    overflow: hidden;
 }
 .about{
     height: 100vh;
